--- a/index.html
+++ b/index.html
@@ -68,10 +68,18 @@
         <hr>
         <div class="row">
           <div class="col-lg-12 ml-auto">
-            <p class="lead">I have 15+ years of experience as software developer and have worked at both large software consulting and for small startups. While I'm a proficient Full Stack(.NET) developer my experties are building mobile applications and mobile
-              first websites, with scalable backend APIs.</p>
             <p class="lead">
-              <!-- I like building mobile apps. -->
+              A Software developer with 15+ years of experience, I have worked at large software consulting organisations as well as small startups. Proficient in Full Stack (.NET) developement, my expertise lies in building mobile applications and mobile
+              first websites with scalable backend APIs.
+            </p>
+            <p class="lead">
+              I have been a Technical Architect for Microsoft Azure and .NET based applications.
+            </p>
+            <p class="lead">
+              I have experience of working in Agile / Scrum methodology, and have also played the role of a Scrum Master.
+            </p>
+            <p class="lead">
+              I have worked on projects for diverse domains like Social Networking, Telecom, e-Commerce, HealthCare and Media Distribution
             </p>
           </div>
         </div>
@@ -99,198 +107,227 @@
       <div class="container">
         <h4 class="text-center text-uppercase text-secondary mb-0">Work Experience</h4>
         <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-lg-12 ml-auto">
-            <h5>2016 - CBHS Health Fund Limited</h5>
-            <h6>Web Developer</h6>
-            <p>
 
-            </p>
+        <div class="jumbotron-important">
+          <div class="row">
+            <div class="col">
+              <h5>CBHS Health Fund Limited</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-9 ml-auto">
+              <h6>Web Developer</h6>
+            </div>
+            <div class="col-lg-3 ml-auto">
+              <h6>2016 - Still here</h6>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 ml-auto">
+              <ul>
+                <li>
+                  Building mobile apps "CBHS Health" and "CBHS Corp". Includes architecting backend APIs and Authentication framework(using Identity Server).
+                </li>
+                <li>
+                  Maintaining CBHS Health Fund and CBHS Corporate websites.
+                </li>
+                <li>
+                  Training developers on ionic, angular, .NET Core and Clean Code principles
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-12 ml-auto">
-            <h5>2015 - 2016 EFFISION</h5>
-            <h6>Solutions Developer</h6>
-            <p>
 
-            </p>
+        <div class="jumbotron-important">
+          <div class="row">
+            <div class="col">
+              <h5>EFFISION</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-9 ml-auto">
+              <h6>Solutions Developer</h6>
+            </div>
+            <div class="col-lg-3 ml-auto">
+              <h6>2015 - 2016</h6>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 ml-auto">
+              <ul>
+                <li>
+                  Worked on developing and maintaining insurance underwriting portal, build on ASP.NET
+                </li>
+                <li>
+                  Built POS (Point of Sale) and media distribution mobile app using AngularJS and ionic
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-lg-12 ml-auto">
-            <h5>2014 - Janison</h5>
-            <h6>Software Developer</h6>
-            <p>
 
-            </p>
+        <div class="jumbotron-not-important">
+          <div class="row">
+            <div class="col">
+              <h5>Janison</h5>
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 ml-auto">
-            <h5>2014 - CitiusTech</h5>
-            <h6>Solutions Architect</h6>
-            <p>
+          <div class="row">
+            <div class="col-lg-9 ml-auto">
+              <h6>Software Developer</h6>
+            </div>
+            <div class="col-lg-3 ml-auto">
+              <h6>2014</h6>
+            </div>
+          </div>
 
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 ml-auto">
-            <h5>2008 - 2014 Capgemini</h5>
-            <h6>Manager, Technical Lead, Sr. Consultant</h6>
-            <p>
-
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 ml-auto">
-            <h5>2005 - 2008 Three</h5>
-            <h6>Project Lead, Sr. Developer</h6>
-            <p>
-
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 ml-auto">
-            <h5>2004 - 2005 aurionpro</h5>
-            <h6>Software Developer</h6>
-            <p>
-
-            </p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 ml-auto">
-            <h5>2003 - 2004 - Orient</h5>
-            <h6>Trainee Software Developer</h6>
-            <p>
-
-            </p>
-          </div>
-        </div>
-        <!-- <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-            </a>
+          <!-- <div class="row">
+          <div class="col text-center">
+            <h5>2014 - Moved to Australia</h5>
           </div>
         </div> -->
-      </div>
-      <div class="container">
-        <h4 class="text-center text-uppercase text-secondary mb-0">Side projects</h4>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          NSW RTA
+
+          <br>
+
+          <div class="row">
+            <div class="col">
+              <h5>CitiusTech</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-9 ml-auto">
+              <h6>Solutions Architect</h6>
+            </div>
+            <div class="col-lg-3 ml-auto">
+              <h6>2014</h6>
+            </div>
+          </div>
+        </div>
+
+        <div class="jumbotron-important">
+          <div class="row">
+            <div class="col">
+              <h5>Capgemini</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-9 ml-auto">
+              <h6>Manager, Technical Lead, Sr. Consultant</h6>
+            </div>
+            <div class="col-lg-3 ml-auto">
+              <h6>2008 - 2014</h6>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 ml-auto">
+              <ul>
+                <li>
+                  Worked as Microsoft Azure and MS.NET Technology Lead / Technical Architect
+                </li>
+                <li>
+                  Worked on building scalable backend APIs for hangout and social events app on MS Azure
+                </li>
+                <li>
+                  Led teams for Level 2 and Level 3 support, which was responsible for handling direct customer queries and helping them to complete business processes
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="jumbotron-important">
+          <div class="row">
+            <div class="col">
+              <h5>3 Global Services (Tech Mahindra)</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-9 ml-auto">
+              <h6>Project Lead, Sr. Developer</h6>
+            </div>
+            <div class="col-lg-3 ml-auto">
+              <h6>2005 - 2008</h6>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-12 ml-auto">
+              <ul>
+                <li>
+                  Helped to setup the SDLC process, which included minimum documentation for new application development, set code review guidelines and other quality processes
+                </li>
+                <li>
+                  Led projects through various stages of requirement gathering, project planning, writing technical specifications, development, testing and support
+                </li>
+                <li>
+                  Worked as a trainer to conduct ASP.NET (new features) training for the team, which helped developers to quickly learn and implement new features in upcoming projects
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="jumbotron-not-important">
+
+          <div class="row">
+            <div class="col">
+              <h5>aurionpro</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-9 ml-auto">
+              <h6>Software Developer</h6>
+            </div>
+            <div class="col-lg-3 ml-auto">
+              <h6>2004 - 2005</h6>
+            </div>
+          </div>
+          <br>
+          <div class="row">
+            <div class="col">
+              <h5>IT PEOPLE/Orient Information Technology</h5>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-9 ml-auto">
+              <h6>Trainee Software Developer</h6>
+            </div>
+            <div class="col-lg-3 ml-auto">
+              <h6>2003 - 2004</h6>
+            </div>
+          </div>
         </div>
       </div>
+
+      <!-- <div class="container">
+        <h4 class="text-center text-uppercase text-secondary mb-0">Side projects</h4>
+        <div class="jumbotron-not-important">
+
+          <div class="row">
+            NSW RTA
+          </div>
+        </div>
+      </div> -->
+
     </section>
 
     <section class="bg-primary text-white mb-0" id="contact">
       <div class="container">
         <h4 class="text-center text-uppercase text-white mb-0">Contact Me</h4>
-        <hr class="star-dark mb-5">
+        <hr>
         <div class="row">
           <div class="col text-center">
-            <a class="text-white text-center" href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a>
+            <h5>
+              <a class="text-white text-center" href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a>
+            </h5>
+          </div>
+
+          <div class="col text-center">
+            <h5>
+              <a class="text-white text-center" href="tel:+61466098915">0466 098 915</a>
+            </h5>
           </div>
         </div>
-        <!-- <div class="row">
-          <div class="col-lg-8 mx-auto">
-            <form name="sentMessage" id="contactForm" novalidate="novalidate">
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Name</label>
-                  <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Email Address</label>
-                  <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Phone Number</label>
-                  <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number.">
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <div class="control-group">
-                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                  <label>Message</label>
-                  <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                  <p class="help-block text-danger"></p>
-                </div>
-              </div>
-              <br>
-              <div id="success"></div>
-              <div class="form-group">
-                <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
-              </div>
-            </form>
-          </div>
-        </div> -->
       </div>
     </section>
 
