--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <img class="img-fluid mb-5 d-block mx-auto img-circle" src="img/profile-00.png" alt="">
         <h3 class="text-uppercase mb-0">Prashant Kurlekar</h3>
         <hr class="name">
-        <h4 class="font-weight-light mb-0">Full Stack(.NET) - Web Developer in Sydney, Australia</h4>
+        <h4 class="font-weight-light mb-0">Full Stack(.NET) / Web Developer</h4>
       </div>
     </header>
 
@@ -346,14 +346,14 @@
     <footer class="footer text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 mb-5 mb-lg-0">
+          <div class="col-md-6 mb-6 mb-lg-0">
             <h4 class="mb-6">
               <i class="fa fa-map-signs"></i>
               Coordinates
             </h4>
             <p class="lead mb-0">Sydney, Australia</p>
           </div>
-          <div class="col-md-6 mb-5 mb-lg-0">
+          <div class="col-md-6 mb-6 mb-lg-0">
             <h4 class="mb-6">What else</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
