--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
         </div>
       </div> -->
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row">
         <div class="col text-center">
           <h3>
@@ -354,7 +354,7 @@
           </h3>
         </div>
       </div>
-    </div>
+    </div> -->
 
   </section>
 
