--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-lg-12 ml-auto">
           <p class="lead">
-            A Software developer with 18+ years of experience, I have worked at large software consulting organisations as well as small startups. Proficient in Full Stack (.NET) developement, my expertise lies in building mobile applications and mobile
+            A Software developer with <span id="experience"></span>+ years of experience, I have worked at large software consulting organisations as well as small startups. Proficient in Full Stack (.NET) developement, my expertise lies in building mobile applications and mobile
             first websites with scalable backend APIs.
           </p>
           <p class="lead">
@@ -415,7 +415,7 @@
 
   <div class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>&copy; Prashant Kurlekar 2021</small>
+      <small>&copy; Prashant Kurlekar <span id="currentYear"></span></small>
     </div>
   </div>
 
@@ -440,6 +440,9 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/freelancer.min.js"></script>
+
+  <!-- Custom scripts -->
+  <script src="js/other-info.js"></script>
 
 </body>
 
